--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "objection": "^3.0.1",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
     "jest": "^29.3.1",
     "jest-extended": "^3.1.0",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start:dev": "ts-node-dev ./src/server.ts"
   },
   "repository": {
     "type": "git",
