--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
-  "name": "mblog-api",
-  "version": "1.0.0",
-  "description": "",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^2.3.0",
-    "objection": "^3.0.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "pg": "^8.8.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
-    "@types/passport": "^1.0.11",
-    "jest": "^29.3.1",
-    "jest-extended": "^3.1.0",
-    "supertest": "^6.3.1",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3"
-  },
-  "scripts": {
-    "test": "jest",
-    "start:dev": "ts-node-dev ./src/server.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/criskell/mblog-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/criskell/mblog-api/issues"
-  },
-  "homepage": "https://github.com/criskell/mblog-api#readme"
+   "name": "mblog-api",
+   "version": "1.0.0",
+   "description": "",
+   "dependencies": {
+      "bcrypt": "^5.1.0",
+      "dotenv": "^16.0.3",
+      "env-cmd": "^10.1.0",
+      "express": "^4.18.2",
+      "jsonwebtoken": "^8.5.1",
+      "passport": "^0.6.0",
+      "passport-jwt": "^4.0.0",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.1",
+      "typeorm": "0.3.10",
+      "typescript": "^4.9.3"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.14",
+      "@types/node": "^16.11.10",
+      "@types/passport": "^1.0.11",
+      "jest": "^29.3.1",
+      "supertest": "^6.3.1",
+      "ts-jest": "^29.0.3",
+      "ts-node": "10.7.0",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "4.5.2"
+   },
+   "scripts": {
+      "test": "jest",
+      "start:dev": "env-cmd ts-node-dev ./src/server.ts",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "migration:revert": "env-cmd npm run typeorm migration:revert -- -d src/orm/datasource.ts",
+      "migration:run": "env-cmd npm run typeorm migration:run -- -d src/orm/datasource.ts",
+      "migration:create": "cd src/orm/migrations && npm run typeorm migration:create",
+      "start": "ts-node src/index.ts"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/criskell/mblog-api.git"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/criskell/mblog-api/issues"
+   },
+   "homepage": "https://github.com/criskell/mblog-api#readme"
 }
