--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "",
    "dependencies": {
       "bcrypt": "^5.1.0",
+      "celebrate": "^15.0.1",
       "dotenv": "^16.0.3",
       "env-cmd": "^10.1.0",
       "express": "^4.18.2",
