--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
       "@types/express": "^4.17.14",
       "@types/node": "^16.11.10",
       "@types/passport": "^1.0.11",
+      "@typescript-eslint/eslint-plugin": "^5.45.0",
+      "@typescript-eslint/parser": "^5.45.0",
+      "eslint": "^8.28.0",
+      "eslint-config-prettier": "^8.5.0",
+      "eslint-plugin-prettier": "^4.2.1",
       "jest": "^29.3.1",
+      "prettier": "^2.8.0",
       "supertest": "^6.3.1",
       "ts-jest": "^29.0.3",
       "ts-node": "10.7.0",
@@ -36,7 +42,10 @@
       "migration:run": "env-cmd npm run typeorm migration:run -- -d src/orm/datasource.ts",
       "migration:generate": "env-cmd npm run typeorm migration:generate -- -d src/orm/datasource.ts src/orm/migrations/$npm_config_name",
       "migration:create": "npm run typeorm migration:create src/orm/migrations/$npm_config_name",
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "lint": "eslint . --ext .ts",
+      "lint:fix": "eslint . --ext .ts --fix",
+      "format": "prettier --config .prettierrc 'src/**/*.ts' --write"
    },
    "repository": {
       "type": "git",
