--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "target": "es2021",
       "module": "commonjs",
       "moduleResolution": "node",
-      "outDir": "./build",
+      "outDir": "./dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
