--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
       "passport-jwt": "^4.0.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
-      "ts-node": "^10.9.1",
-      "typeorm": "0.3.10",
-      "typescript": "^4.9.3"
+      "typeorm": "0.3.10"
    },
    "devDependencies": {
       "@types/express": "^4.17.14",
+      "@types/jest": "^29.2.3",
       "@types/node": "^16.11.10",
       "@types/passport": "^1.0.11",
+      "@types/supertest": "^2.0.12",
       "@typescript-eslint/eslint-plugin": "^5.45.0",
       "@typescript-eslint/parser": "^5.45.0",
       "eslint": "^8.28.0",
@@ -36,6 +36,8 @@
    },
    "scripts": {
       "test": "jest",
+      "test:unit": "env-cmd -f .env.test jest --testPathPattern=__tests__/unit",
+      "test:integration": "env-cmd -f .env.test jest --testPathPattern=__tests__/integration",
       "start:dev": "env-cmd ts-node-dev ./src/server.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "migration:revert": "env-cmd npm run typeorm migration:revert -- -d src/orm/datasource.ts",
